# omrya

./: .gitignore  Cargo.toml  README.md
src/: build_info.rs  compile_fixes.rs  direct_example.rs  domain.rs  evaluation.rs  fjall.rs  fjall_mr.rs  fjall_pig.rs  fluo_pcj.rs  indexing.rs  inference.rs  instance.rs  legacy.rs  lib.rs  main.rs  manual.rs  merger.rs  partition.rs  pcj.rs  pcj_indexing.rs  query.rs  reasoning.rs  release_audit.rs  store.rs  web.rs
src/api/: controller.rs
src/code_intel/: mod.rs
src/indexes/: mod.rs
src/partition/: mod.rs
src/pcj/: fluo.rs  indexing.rs  mod.rs
src/reasoning/: mod.rs
src/resolver/: datetime.rs  mod.rs  triple.rs
src/sparql/: evaluation.rs  mod.rs  query.rs
src/storage/: instance.rs  mod.rs  store.rs
src/storage/fjall/: mod.rs
src/tools/: direct_example.rs  mapreduce.rs  merger.rs  mod.rs  pig.rs
src/web/: sparql.html
